--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 				<p>as a birthday present to you</p>
 				<p>thanks for being there 愛</p>
 				<p>thanks for the memories we made</p>
-				<p>thanks for everything Sushanth</p>
+				<p>thanks for everything my love</p>
 				<p>I wish you all the best</p>
 				<p>May your life be at ease</p>
 				<p>May all your wishes come true</p>
